# daily-build-newsletter

./: .gitignore  AGENTS.md  LICENSE  README.md
.agent/skills/daily-article-generator/: SKILL.md
.githooks/: pre-commit
modules/article-harvest/: README.md  pyproject.toml
modules/article-harvest/scripts/: e2e_source.py  worktree-sync-data.sh
modules/article-harvest/tests/: conftest.py  test_aggregation_sources.py  test_blog_sources.py  test_hf_blog.py  test_http.py  test_ingest.py  test_mailchimp_archive.py  test_paul_graham.py  test_queries.py  test_rss.py  test_sqlite_index.py  (+2 more)
modules/article-ingest/: AGENTS.md  README.md  pyproject.toml
modules/article-ingest/scripts/: lint_limits.py
modules/article-ingest/src/article_ingest/: __init__.py  cli.py  extract.py  front_matter.py  importer.py  index_fetcher_utils.py  index_fetchers.py  index_ingest.py  index_models.py  index_render.py  index_sources.py  index_storage.py  ingest.py  ingest_fetch.py  ingest_runtime.py  models.py  paths.py  run_logger.py  storage.py  store.py  store_runs.py  text_processing.py  timestamps.py  url_slug.py
modules/article-ingest/src/article_ingest/adapters/: __init__.py  base.py  comments.py  html.py  releasebot.py  rss.py
modules/article-ingest/tests/: conftest.py  test_adapters.py  test_cli.py  test_front_matter.py  test_importer.py  test_importer_errors.py  test_index_ingest.py  test_ingest_fetch.py  test_ingest_pipeline.py  test_releasebot_adapter.py  test_storage_assets.py  test_store.py  test_text_processing.py  test_url_slug.py
scripts/: worktree-sync-data.sh
(+79 files in other folders)
